--- a/aclap/src/app/components/home/home.component.html
+++ b/aclap/src/app/components/home/home.component.html
@@ -1,1 +1,27 @@
-<p>home works!</p>
+<div>
+    <div class="jumbotron jumbotron-fluid">
+        <div class="container">
+            <div class="row">
+                <div class="col-ms-12 col-md-4 d-flex justify-content-center">
+                    <img src="../../../assets/logo.png" style="height: 200px">
+                </div>
+                <div class="col-sm-12 col-md-8 justify-content-center">
+                    <div class="row">
+                        <h1>Bienvenido a la Plataforma de Educación Ambiental</h1>
+                    </div>
+                    <div class="row justify-content-center">
+                        <button class="btn btn-goto btn-lg">VER MÓDULOS</button>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="container">
+        <div class="row row-content">
+            <app-module-card></app-module-card>
+        </div>
+    </div>
+</div>
+
+
+
