--- a/aclap/src/app/components/footer/footer.component.html
+++ b/aclap/src/app/components/footer/footer.component.html
@@ -1,1 +1,41 @@
-<p>footer works!</p>
+<footer class="footer">
+    <div class="container">
+        <div class="row">             
+            <div class="col-6 offset-1 col-sm-2">
+                <ul class="list-unstyled footer-text">
+                    <!--TODO: USE THE ROUTER-->
+                    <li><a>Inicio</a></li>
+                    <li><a>Perfil</a></li>
+                    <li><a>Módulos</a></li>
+                    <li><a>Eventos</a></li>
+                    <li><a>Acerca de</a></li>
+                </ul>
+            </div>
+            <div class="col-3 offset-xs-1 offset-sm-2 col-sm-3">
+                <!--TODO: USE THE ROUTER-->
+                <ul class="list-unstyled footer-text">
+                    <li><a>Ser Educador</a></li>
+                    <li><a>Iniciar Sesión</a></li>
+                </ul>
+            </div>
+            <div class="col-12 offset-xs-1 col-sm-4 align-self-center">
+                <h4 style="color: white;">Aliados</h4>
+                <!--TODO: Change for the ANGULAR EQUIVALENT with and ARRAY as a parameter-->
+                <ul class="list-unstyled footer-text">
+                    <li><a>MINAE</a></li>
+                    <li><a>SINAC</a></li>
+                    <li><a>ACLAP</a></li>
+                    <li><a>PAISAJES PRODUCTIVOS</a></li>
+                    <li><a>PNUD</a></li>
+                    <li><a>GEF</a></li>
+                    <li><a>TEC</a></li>
+                </ul>
+            </div>
+       </div>
+       <div class="row justify-content-center">             
+            <div class="col-auto" style="color: white;">
+                <p>© Copyright 2020 Ambientate</p>
+            </div>
+       </div>
+    </div>
+</footer>
