--- a/aclap/src/app/components/header/header.component.html
+++ b/aclap/src/app/components/header/header.component.html
@@ -1,1 +1,24 @@
-<p>header works!</p>
+<nav class="navbar navbar-dark navbar-expand-sm fixed-top">
+    <div class="container">
+        <button class="navbar-toggler" type="button" data-toggle="collapse" (click)="isNavbarCollapsed = !isNavbarCollapsed" data-target="#Navbar">
+            <span class="navbar-toggler-icon order-xs-1"></span>
+        </button>
+        <img class="d-block d-sm-none" src="../../../assets/logo.png" height="30" width="41">
+        <div [ngbCollapse]="isNavbarCollapsed" class="collapse navbar-collapse" id="Navbar">
+            <ul class="navbar-nav mr-auto">
+                <a class="navbar-brand mr-auto d-none d-md-block"><img src="../../../assets/logo.png" height="30">Ambientate</a>
+                <li class="nav-item active ml-md-3"><a class="nav-link">Inicio</a></li>
+                <li class="nav-item"><a class="nav-link" > Perfil</a></li>
+                <li class="nav-item"><a class="nav-link" >Módulos</a></li>
+                <li class="nav-item"><a class="nav-link" >Eventos</a></li>
+                <li class="nav-item"><a class="nav-link" >Acerca de</a></li>
+            </ul>
+            <span class="navbar-text">
+                <a id="singupButton" class="btn">Ser Educador</a>
+            </span>
+            <span class="navbar-text">
+                <a id="loginButton" class="btn">Ingresar</a>
+            </span>
+        </div>
+    </div>
+</nav>
