--- a/aclap/src/app/components/module-card/module-card.component.html
+++ b/aclap/src/app/components/module-card/module-card.component.html
@@ -1,1 +1,20 @@
-<p>module-card works!</p>
+<div class="card" style="max-width: 800px;">
+    <div class="row no-gutters">
+        <div class="col-12 col-md-4">
+            <svg class="bd-placeholder-img" width="100%" height="250" xmlns="http://www.w3.org/2000/svg" aria-label="Placeholder: Image" preserveAspectRatio="xMidYMid slice" role="img"><title>Placeholder</title><rect width="100%" height="100%" fill="#868e96"/><text x="50%" y="50%" fill="#dee2e6" dy=".3em">Image</text></svg>
+        </div>
+        <div class="col-12 col-md-8">
+            <div class="container-fluid no-gutters">
+                <div class="card-body mx-0">
+                    <div class="row" style="background-color: #454545;">
+                        <div class="col-12" >
+                            <h5 class="card-title">{{ module.name + module.id}}</h5>
+                        </div>
+                    </div>
+                <p class="card-text">It's a broader card with text below as a natural lead-in to extra content. This content is a little longer.</p>
+                <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
