--- a/aclap/src/app/components/modules/modules.component.html
+++ b/aclap/src/app/components/modules/modules.component.html
@@ -1,1 +1,14 @@
-<p>modules works!</p>
+<div>
+    <div class="jumbotron jumbotron-fluid">
+        <div class="container">
+            <div class="row">
+                <h1 style="font-size:50px;">Módulos de aprendizaje</h1>
+            </div>
+        </div>
+    </div>
+    <div class="container">
+        <div class="row row-content">
+            <app-module-card-list></app-module-card-list>
+        </div>
+    </div>
+</div>
