--- a/aclap/src/app/components/home/home.component.html
+++ b/aclap/src/app/components/home/home.component.html
@@ -17,8 +17,13 @@
         </div>
     </div>
     <div class="container">
-        <div class="row row-content">
-            <app-module-card></app-module-card>
+        <div class="row">
+            <div class="col-12">
+                <h1>Próximos Eventos</h1>
+            </div>
+        </div>
+        <div class="row row-content d-flex justify-content-center">
+            <app-module-card-list></app-module-card-list>
         </div>
     </div>
 </div>
