--- a/aclap/src/app/components/modules/modules.component.html
+++ b/aclap/src/app/components/modules/modules.component.html
@@ -7,7 +7,7 @@
         </div>
     </div>
     <div class="container">
-        <div class="row row-content">
+        <div class="row row-content d-flex justify-content-center">
             <app-module-card-list></app-module-card-list>
         </div>
     </div>
