--- a/aclap/src/app/components/footer/footer.component.html
+++ b/aclap/src/app/components/footer/footer.component.html
@@ -4,9 +4,9 @@
             <div class="col-6 offset-1 col-sm-2">
                 <ul class="list-unstyled footer-text">
                     <!--TODO: USE THE ROUTER-->
-                    <li><a>Inicio</a></li>
+                    <li><a [routerLink]="['/inicio']">Inicio</a></li>
                     <li><a>Perfil</a></li>
-                    <li><a>Módulos</a></li>
+                    <li><a [routerLink]="['/modulos']">Módulos</a></li>
                     <li><a>Eventos</a></li>
                     <li><a>Acerca de</a></li>
                 </ul>
