--- a/aclap/src/app/components/module-card/module-card.component.html
+++ b/aclap/src/app/components/module-card/module-card.component.html
@@ -1,18 +1,40 @@
-<div class="card" style="max-width: 800px;">
-    <div class="row no-gutters">
-        <div class="col-12 col-md-4">
-            <svg class="bd-placeholder-img" width="100%" height="250" xmlns="http://www.w3.org/2000/svg" aria-label="Placeholder: Image" preserveAspectRatio="xMidYMid slice" role="img"><title>Placeholder</title><rect width="100%" height="100%" fill="#868e96"/><text x="50%" y="50%" fill="#dee2e6" dy=".3em">Image</text></svg>
-        </div>
-        <div class="col-12 col-md-8">
-            <div class="container-fluid no-gutters">
-                <div class="card-body mx-0">
-                    <div class="row" style="background-color: #454545;">
-                        <div class="col-12" >
-                            <h5 class="card-title">{{ module.name + module.id}}</h5>
+<div class="row row-content d-flex justify-content-center">
+    <div class="col-auto">
+        <div class="card"> <!--TODO: corregir style -->
+            <div class="row no-gutters">
+                <div class="col-12 col-md-4">
+                    <svg class="bd-placeholder-img" width="100%" height="100%" xmlns="http://www.w3.org/2000/svg" aria-label="Placeholder: Image" preserveAspectRatio="xMidYMid slice" role="img"><title>Placeholder</title><rect width="100%" height="100%" fill="#868e96"/><text x="50%" y="50%" fill="#dee2e6" dy=".3em">Image</text></svg>
+                </div>
+                <div class="col-12 col-md-8">
+                    <div class="container-fluid flex-grow-1">
+                        <div class="row module-header align-items-center">
+                            <div class="col-12">
+                                <h5 class="card-title">{{ module.name }}</h5>
+                            </div>
+                        </div>
+                        <div class="row flex-grow-1 card-bg">
+                            <div class="card-body container">
+                                <div class="row d-flex justify-content-md-end">
+                                    <p class="card-text"> En proceso </p>
+                                </div>
+                                <div class="row">
+                                    <div class="col-12">
+                                        <app-discipline *ngFor="let d of module.disciplines" [discipline]="d" ></app-discipline>
+                                    </div>
+                                </div>
+                                <div class="row row-p">
+                                    <div class="col-sm-12 col-md-8">
+                                        <div class="progress">
+                                            <div class="progress-bar bg-success" role="progressbar" style="width: 12%" aria-valuenow="12" aria-valuemin="0" aria-valuemax="100"></div>
+                                        </div>
+                                    </div>
+                                    <div class="col-sm-12 col-md-4">
+                                        Actividades 1/2
+                                    </div>
+                                </div>
+                            </div>
                         </div>
                     </div>
-                <p class="card-text">It's a broader card with text below as a natural lead-in to extra content. This content is a little longer.</p>
-                <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
                 </div>
             </div>
         </div>
