--- a/aclap/src/app/components/module-card-list/module-card-list.component.html
+++ b/aclap/src/app/components/module-card-list/module-card-list.component.html
@@ -1,1 +1,1 @@
-<app-module-card *ngFor="let card of cards" [module]="card"></app-module-card>
+<app-module-card *ngFor="let module of modules" [module]="module"></app-module-card>
