--- a/aclap/src/app/components/home/home.component.tns.html
+++ b/aclap/src/app/components/home/home.component.tns.html
@@ -1,1 +1,1 @@
-<Button text="home works!" class="btn btn-primary"></Button>
+<Button text="home works 420 asd asd" class="btn btn-primary"></Button>
