Display Youtube Component done
must install youtube dependency

--- a/aclap/src/app/components/display/display-youtube/display-youtube.component.html
+++ b/aclap/src/app/components/display/display-youtube/display-youtube.component.html
@@ -1,1 +1,5 @@
-<p>display-youtube works!</p>
+<div class="row d-flex justify-content-center">
+    <div class="col-auto embed-responsive embed-responsive-16by9">
+        <youtube-player class="" videoId="{{ getId(video.url) }}"></youtube-player>
+    </div>
+</div>
