--- a/aclap/src/app/components/module-page/module-page.component.html
+++ b/aclap/src/app/components/module-page/module-page.component.html
@@ -21,7 +21,7 @@
                     </div>
                 </ul>
             </div>
-            <div class="col-12 col-md-6">
+            <div class="col-12 col-md-6 pt-3 pt-md-0">
                 <ul class="list-group">
                     <li class="list-group-item active header"><h3>Objetivos</h3></li>
                     <div *ngFor="let objective of module.objectives">
@@ -32,6 +32,9 @@
         </div>
         <div class="row row-content">
             <div class="col-12">
+                <app-display-youtube [video]=video></app-display-youtube>
+            </div>
+            <div class="col-12">
                 <app-display-title [title]=title></app-display-title>
             </div>
             <div class="col-12">
@@ -39,9 +42,6 @@
             </div>
             <div class="col-12">
                 <app-display-image [image]=image></app-display-image>
-            </div>
-            <div class="col-12">
-
             </div>
         </div>
     </div>
