--- a/aclap/src/app/components/module-page/module-page.component.html
+++ b/aclap/src/app/components/module-page/module-page.component.html
@@ -1,1 +1,48 @@
-<p>module-page works!</p>
+<div>
+    <div class="jumbotron jumbotron-fluid">
+        <div class="container">
+            <div class="row">
+                <div class="col-11">
+                    <h1 style="font-size:50px;">Módulo: {{ module.name }}</h1>
+                </div>
+                <div class="col-1">
+                    <a> EDITAR</a>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="container">
+        <div class="row mt-4">
+            <div class="col-12 col-md-6">
+                <ul class="list-group">
+                    <li class="list-group-item active header"><h3>Requisitos previos</h3></li>
+                    <div *ngFor="let requirement of module.requirements">
+                        <li class="list-group-item"> {{requirement}} </li>
+                    </div>
+                </ul>
+            </div>
+            <div class="col-12 col-md-6 pt-3 pt-md-0">
+                <ul class="list-group">
+                    <li class="list-group-item active header"><h3>Objetivos</h3></li>
+                    <div *ngFor="let objective of module.objectives">
+                        <li class="list-group-item"> {{objective}} </li>
+                    </div>
+                </ul>
+            </div>
+        </div>
+        <div class="row row-content">
+            <div class="col-12">
+                <!--<app-display-youtube [video]=video></app-display-youtube>-->
+            </div>
+            <div class="col-12">
+                <!--<app-display-title [title]=title></app-display-title>-->
+            </div>
+            <div class="col-12">
+               <!-- <app-display-paragraph [paragraph]=para></app-display-paragraph>-->
+            </div>
+            <div class="col-12">
+                <!--<app-display-image [image]=image></app-display-image>-->
+            </div>
+        </div>
+    </div>
+</div>
