--- a/aclap/src/app/components/display/display-activity/display-activity.component.html
+++ b/aclap/src/app/components/display/display-activity/display-activity.component.html
@@ -1,1 +1,29 @@
-<p>display-activity works!</p>
+<div class="card">
+    <div class="card-header">
+        ACTIVIDAD - Tiempo estimado {{ activity.estimatedMinutes }} min.
+    </div>
+    <div class="card-body">
+        <div class="col-12 col-md-5">
+            <p class="text-justify">
+                {{ activity.description }}
+            </p>
+        </div>
+        <div class="col-12 col-md-5">
+            <div class="row">
+                Material digital
+            </div>
+            <div class="row">
+                
+            </div>
+            <div class="row">
+                Útiles necesarios
+            </div>
+            <div class="row">
+                <p> {{ activity.tools }} </p>
+            </div>
+        </div>
+        <div class="col-12 col-md-3">
+            
+        </div>
+    </div>
+</div>
