added aclap logo to android drawables

--- a/aclap/src/app/components/header/header.component.tns.html
+++ b/aclap/src/app/components/header/header.component.tns.html
@@ -1,1 +1,3 @@
-<Button text="header works!" class="btn btn-primary"></Button>
+<ActionBar title="420">
+    <Image src="res://logo" class="action-image"></Image>
+</ActionBar>
