Bugs fixed part 2

--- a/aclap/src/app/components/discipline/discipline.component.html
+++ b/aclap/src/app/components/discipline/discipline.component.html
@@ -1,1 +1,1 @@
-<span class="badge badge-pill" [ngStyle]="background-color: discipline.subject.color; color: white;" > {{ discipline.subject.name + ' ' + discipline.year }} </span>
+<span class="badge badge-pill item" [ngStyle]="{'background-color': discipline.subject.color}" style="color: white;" > {{ discipline.subject.name + ' ' + discipline.year }} </span>
