--- a/aclap/src/app/components/footer/footer.component.html
+++ b/aclap/src/app/components/footer/footer.component.html
@@ -34,7 +34,7 @@
        </div>
        <div class="row justify-content-center">             
             <div class="col-auto" style="color: white;">
-                <p>© Copyright 2020 Ambientate</p>
+                <p>© Copyright 2020 EDUCA-ACLAP</p>
             </div>
        </div>
     </div>
