--- a/aclap/src/app/components/header/header.component.html
+++ b/aclap/src/app/components/header/header.component.html
@@ -6,7 +6,7 @@
         <img class="d-block d-sm-none" src="../../../assets/logo.png" height="30">
         <div [ngbCollapse]="isNavbarCollapsed" class="collapse navbar-collapse" id="Navbar">
             <ul class="navbar-nav mr-auto">
-                <a class="navbar-brand mr-auto d-none d-md-block"><img src="../../../assets/logo.png" [routerLink]="['/inicio']" height="30">Ambientate</a>
+                <a class="navbar-brand mr-auto d-none d-md-block" [routerLink]="['/inicio']"><img src="../../../assets/logo.png" height="30">EDUCA-ACLAP</a>
                 <li class="nav-item ml-md-3" [routerLinkActive]="['active']"><a class="nav-link" [routerLink]="['/inicio']">Inicio</a></li>
                 <li class="nav-item" [routerLinkActive]="['active']"><a class="nav-link" > Perfil</a></li>
                 <li class="nav-item" [routerLinkActive]="['active']"><a class="nav-link" [routerLink]="['/modulos']">Módulos</a></li>
