--- a/aclap/src/app/components/home/home.component.html
+++ b/aclap/src/app/components/home/home.component.html
@@ -10,7 +10,7 @@
                         <h1>Bienvenido a la Plataforma de Educación Ambiental</h1>
                     </div>
                     <div class="row justify-content-center">
-                        <button class="btn btn-goto btn-lg">VER MÓDULOS</button>
+                        <button class="btn btn-goto btn-lg" [routerLink]="['/modulos']" >VER MÓDULOS</button>
                     </div>
                 </div>
             </div>
