--- a/aclap/src/app/components/module-card/module-card.component.scss
+++ b/aclap/src/app/components/module-card/module-card.component.scss
@@ -2,6 +2,7 @@
 
 $module-color: #206A5D;
 $l-grey: #F8F8F8;
+$break-small: 320px;
 
 .module-header{
     background-color: $module-color;
@@ -22,3 +23,4 @@ $l-grey: #F8F8F8;
 .card-title{
     font-size: 36px;
 }
+
