--- a/aclap/src/app/components/module-page/module-page.component.html
+++ b/aclap/src/app/components/module-page/module-page.component.html
@@ -31,18 +31,7 @@
             </div>
         </div>
         <div class="row row-content">
-            <div class="col-12">
-                <app-display-youtube [video]=video></app-display-youtube>
-            </div>
-            <div class="col-12">
-                <app-display-title [title]=title></app-display-title>
-            </div>
-            <div class="col-12">
-                <app-display-paragraph [paragraph]=para></app-display-paragraph>
-            </div>
-            <div class="col-12">
-                <app-display-image [image]=image></app-display-image>
-            </div>
+            <app-displayer [sections]=sections></app-displayer>
         </div>
     </div>
 </div>
