--- a/aclap/src/app/components/display/display-image/display-image.component.html
+++ b/aclap/src/app/components/display/display-image/display-image.component.html
@@ -1,6 +1,6 @@
 <div class="row d-flex justify-content-center">
     <div class="col-auto">
-        <div class="card shadow">
+        <div class="card shadow-sm">
             <div class="kalim">
                 <img class="mx-auto d-block" src="{{ image.$url }}" alt="Card image cap">
             </div>
