--- a/aclap/src/app/components/module-card/module-card.component.html
+++ b/aclap/src/app/components/module-card/module-card.component.html
@@ -2,8 +2,7 @@
     <div class="col-auto">
         <div class="card"> <!--TODO: corregir style -->
             <div class="row no-gutters">
-                <div class="col-12 col-md-4">
-                    <svg class="bd-placeholder-img" width="100%" height="100%" xmlns="http://www.w3.org/2000/svg" aria-label="Placeholder: Image" preserveAspectRatio="xMidYMid slice" role="img"><title>Placeholder</title><rect width="100%" height="100%" fill="#868e96"/><text x="50%" y="50%" fill="#dee2e6" dy=".3em">Image</text></svg>
+                <div class="col-12 col-md-4" [style.background-image]="'url(' + module.imageUrl + ')'" [style.min-height]="'150px'">
                 </div>
                 <div class="col-12 col-md-8">
                     <div class="container-fluid flex-grow-1">
@@ -16,7 +15,7 @@
                             <div class="card-body container">
                                 <div class="row d-flex justify-content-md-end">
                                     <div class="col-auto">
-                                        <p class="card-text"> En proceso </p>
+                                        <!-- <p class="card-text"> En proceso </p> -->
                                     </div>
                                 </div>
                                 <div class="row">
@@ -25,14 +24,14 @@
                                     </div>
                                 </div>
                                 <div class="row row-p">
-                                    <div class="col-sm-12 col-md-8">
+                                    <!-- <div class="col-sm-12 col-md-8">
                                         <div class="progress">
                                             <div class="progress-bar bg-success" role="progressbar" style="width: 12%" aria-valuenow="12" aria-valuemin="0" aria-valuemax="100"></div>
                                         </div>
                                     </div>
                                     <div class="col-sm-12 col-md-4">
                                         Actividades 1/2
-                                    </div>
+                                    </div> -->
                                 </div>
                             </div>
                         </div>
