--- a/aclap/src/app/components/app.component.scss
+++ b/aclap/src/app/components/app.component.scss
@@ -1,6 +1,6 @@
 $jumbo-color: #99D493;
 $button-color: #E69E21;
-$lime-color: #D2E603;
+$lime-color: #c2d02c;
 $nav-color: #206A5D;
 
 .row-content{
@@ -19,5 +19,9 @@ $nav-color: #206A5D;
 
 .lime{
     background-color: $lime-color;
+    color: whitesmoke;
+}
+
+.wt{
     color: whitesmoke;
 }
