--- a/aclap/src/app/components/module-page/module-page.component.html
+++ b/aclap/src/app/components/module-page/module-page.component.html
@@ -6,7 +6,7 @@
                     <h1 style="font-size:50px;">Módulo: {{ module.name }}</h1>
                 </div>
                 <div class="col-1">
-                    <a> EDITAR</a>
+                    <a class="wt"  [routerLink]="['/modulos',module.id,'editar']"> EDITAR</a>
                 </div>
             </div>
         </div>
