--- a/aclap/src/app/components/header/header.component.tns.html
+++ b/aclap/src/app/components/header/header.component.tns.html
@@ -1,3 +1,29 @@
-<ActionBar title="420">
-    <Image src="res://logo" class="action-image"></Image>
-</ActionBar>
+<Page xmlns:sd="nativescript-ui-sidedrawer">
+    <ActionBar title="420">
+    </ActionBar>
+
+    <sd:RadSideDrawer>
+        <!-- side drawer content -->
+        <sd:RadSideDrawer.drawerContent>
+            <StackLayout class="sidedrawer-left">
+                <StackLayout class="sidedrawer-header">
+                    <Label text="Hello RadSideDrawer!" class="sidedrawer-header-brand" />
+                </StackLayout>
+                <StackLayout class="sidedrawer-content">
+                    <Label text="Home" class="sidedrawer-list-item-text" />
+                    <Label text="Basics" class="sidedrawer-list-item-text" />
+                    <Label text="Options" class="sidedrawer-list-item-text" />
+                    <Label text="Help" class="sidedrawer-list-item-text" />
+                    <Label text="Advanced" class="sidedrawer-list-item-text" />
+                </StackLayout>
+            </StackLayout>
+        </sd:RadSideDrawer.drawerContent>
+
+        <!-- The main content -->
+        <sd:RadSideDrawer.mainContent>
+            <StackLayout>
+                <Button text="Toggle Drawer" class="btn btn-primary" tap="toggleDrawer" />
+            </StackLayout>
+        </sd:RadSideDrawer.mainContent>
+    </sd:RadSideDrawer>
+</Page>
