--- a/aclap/src/app/components/display/display-image/display-image.component.html
+++ b/aclap/src/app/components/display/display-image/display-image.component.html
@@ -2,7 +2,7 @@
     <div class="col-auto">
         <div class="card shadow-sm">
             <div class="kalim">
-                <img class="mx-auto d-block" src="{{ image.$url }}" alt="Card image cap">
+                <img class="mx-auto d-block" src="{{ image.url }}" alt="Card image cap">
             </div>
             <div class="container-fluid">
                 <div class="row">
