--- a/aclap/src/app/components/app.component.tns.html
+++ b/aclap/src/app/components/app.component.tns.html
@@ -1,23 +1,44 @@
-<page-router-outlet actionBarVisibility="never"></page-router-outlet>
-
+<!-- 
 <TabView androidTabsPosition="top">
   
     <page-router-outlet 
      *tabItem="{title: 'Inicio'}" 
-     class=""
+     name="home"
      actionBarVisibility="never">
     </page-router-outlet>
 
     <page-router-outlet 
       *tabItem="{title: 'Modulos'}" 
-      class="" 
+      name="home" 
       actionBarVisibility="never">
     </page-router-outlet>
 
     <page-router-outlet 
       *tabItem="{title: 'Eventos'}" 
-      class="" 
+      name="home" 
       actionBarVisibility="never">
     </page-router-outlet>
 
-</TabView>
+</TabView> -->
+
+<RadSideDrawer #sideDrawer>
+  <StackLayout tkDrawerContent class="sidedrawer-left">
+      <StackLayout class="sidedrawer-header"></StackLayout>
+      <StackLayout class="sidedrawer-content">
+          <StackLayout class="sidedrawer-list-item">
+              <Button class="btn btn-primary sidedrawer-list-item-text"
+                  text="Inicio" (tap)="navigateToFeatured()"></Button>
+          </StackLayout>
+          <StackLayout class="sidedrawer-list-item">
+              <Button class="btn btn-primary sidedrawer-list-item-text"
+                  text="Modulos" (tap)="navigateToBrowse()"></Button>
+          </StackLayout>
+      </StackLayout>
+  </StackLayout>
+
+  <page-router-outlet tkMainContent actionBarVisibility="never"></page-router-outlet>
+</RadSideDrawer>
+
+
+<!-- <page-router-outlet actionBarVisibility="never"></page-router-outlet> -->
+
