complete and styled sidedrawer for android

--- a/aclap/src/app/components/app.component.tns.scss
+++ b/aclap/src/app/components/app.component.tns.scss
@@ -25,3 +25,16 @@ $nav-color: #206A5D;
 .wt{
     color: whitesmoke;
 }
+
+StackLayout Button{
+    color: #206A5D;
+}
+
+StackLayout{
+    background-color: #206A5D;
+}
+
+Image {
+    width: 40;
+    height: 40;
+}
