--- a/aclap/src/app/components/app.component.tns.html
+++ b/aclap/src/app/components/app.component.tns.html
@@ -23,17 +23,54 @@
 
 <RadSideDrawer #sideDrawer>
   <StackLayout tkDrawerContent class="sidedrawer-left">
+
       <StackLayout class="sidedrawer-header"></StackLayout>
+
       <StackLayout class="sidedrawer-content">
-          <StackLayout class="sidedrawer-list-item">
+          
+        <StackLayout class="sidedrawer-list-item">
+          <Image src=""></Image>
+        </StackLayout>
+
+        <StackLayout class="sidedrawer-list-item">
+          <Image src="res://logo"></Image>
+        </StackLayout>
+
+        <StackLayout class="sidedrawer-list-item">
               <Button class="btn btn-primary sidedrawer-list-item-text"
-                  text="Inicio" (tap)="navigateToFeatured()"></Button>
-          </StackLayout>
-          <StackLayout class="sidedrawer-list-item">
+                  text="Inicio" (tap)="navigateToHome()"></Button>
+        </StackLayout>
+
+        <StackLayout class="sidedrawer-list-item">
+          <Button class="btn btn-primary sidedrawer-list-item-text"
+              text="Perfil"></Button>
+        </StackLayout>
+
+        <StackLayout class="sidedrawer-list-item">
               <Button class="btn btn-primary sidedrawer-list-item-text"
-                  text="Modulos" (tap)="navigateToBrowse()"></Button>
-          </StackLayout>
+                  text="Modulos" (tap)="navigateToModules()"></Button>
+        </StackLayout>
+
+        <StackLayout class="sidedrawer-list-item">
+            <Button class="btn btn-primary sidedrawer-list-item-text"
+                text="Eventos"></Button>
+        </StackLayout>
+
+        <StackLayout class="sidedrawer-list-item">
+          <Button class="btn btn-primary sidedrawer-list-item-text"
+              text="Acerca de"></Button>
+        </StackLayout>
+          
       </StackLayout>
+
+      <StackLayout class="sidedrawer-footer">
+        <StackLayout orientation="horizontal" width="245" height="100">
+          <Label text="Ingresar" horizontalAlignment="left" color="white"></Label>
+          <Label text="       " horizontalAlignment="center"></Label>
+          <Label text="Ser educador" horizontalAlignment="right" color="white"></Label>
+      </StackLayout>
+      </StackLayout>
+
   </StackLayout>
 
   <page-router-outlet tkMainContent actionBarVisibility="never"></page-router-outlet>
