--- a/aclap/src/app/components/module-edit/module-edit.component.html
+++ b/aclap/src/app/components/module-edit/module-edit.component.html
@@ -22,7 +22,8 @@
         </div>
         <div class="col-12 col-md-5 order-first order-md-last">
             <!-- RIGHT ROW  -->
-            <div class="container">
+            <div class="container-fluid pt-0 pt-md-5">
+                <app-edit-module-info [module]=module></app-edit-module-info>
                 <h1 class="h1"> HELL.O </h1>
             </div>
         </div>
