Login Form communication to Controller
Design In Modal

--- a/aclap/src/app/components/header/header.component.html
+++ b/aclap/src/app/components/header/header.component.html
@@ -17,7 +17,7 @@
                 <a id="singupButton" class="btn">Ser Educador</a>
             </span>
             <span class="navbar-text">
-                <a id="loginButton" class="btn">Ingresar</a>
+                <a id="loginButton" (click)="openLogin()" class="btn">Ingresar</a>
             </span>
         </div>
     </div>
