--- a/aclap/src/app/components/login/login.component.html
+++ b/aclap/src/app/components/login/login.component.html
@@ -1,1 +1,29 @@
-<p>login works!</p>
+<div class="modal-body mx-0 my-0 px-0 py-0">
+    <div class="container-fluid">
+        <div class="row">
+            <div class="col-md-8 d-none d-md-block align-items-center d-flex flex-column left-col">
+                
+            </div>
+            <div class="col-12 col-md-4">
+                <h2 class="my-5 text-center">Iniciar Sesión</h2>
+                <form [formGroup]="loginForm" (ngSubmit)="onSubmit()">
+                    <div class="form-group">
+                        <label for="username">E-mail</label>
+                        <input type="text" formControlName="username" class="form-control"/>
+                    </div>
+                    <div class="form-group">
+                        <label for="password">Contraseña</label>
+                        <input type="password" formControlName="password" class="form-control"/>
+                    </div>
+                    <div class="form-group">
+                        <button class="btn btn-primary">
+                            Login
+                        </button>
+                    </div>
+                </form>
+            </div>
+        </div>
+    </div>
+</div>
+
+
