--- a/aclap/src/app/components/home/home.component.scss
+++ b/aclap/src/app/components/home/home.component.scss
@@ -1,8 +1,7 @@
-$jumbo-color: #99D493;
-$button-color: #E27406;
+@use '../app.component.scss';
 
 .jumbotron{
-    background-color: $jumbo-color;
+    background-color: app.$jumbo-color;
     color: whitesmoke;
     padding: 70px 30px 70px 30px;
     margin: 0px auto;
@@ -10,7 +9,7 @@ $button-color: #E27406;
     flex-wrap: wrap;
 }
 .btn-goto{
-    background-color: $button-color;
+    background-color: app.$button-color;
     color: white;
 }
 
