--- a/aclap/src/app/components/discipline/discipline.component.tns.html
+++ b/aclap/src/app/components/discipline/discipline.component.tns.html
@@ -1,1 +1,1 @@
-<Button text="discipline works!" class="btn btn-primary"></Button>
+<Button class="-outline -rounded-sm" text="discipline works!"></Button>
