--- a/aclap/src/app/components/module-card-list/module-card-list.component.tns.html
+++ b/aclap/src/app/components/module-card-list/module-card-list.component.tns.html
@@ -1,1 +1,1 @@
-<Button text="module-card-list works!" class="btn btn-primary"></Button>
+<app-module-card *ngFor="let module of modules" [module]="module"></app-module-card>
