--- a/aclap/src/app/components/module-card/module-card.component.tns.html
+++ b/aclap/src/app/components/module-card/module-card.component.tns.html
@@ -1,1 +1,1 @@
-<Button text="module-card works!" class="btn btn-primary"></Button>
+<app-discipline *ngFor="let d of module.disciplines" [discipline]="d" ></app-discipline>
