android home screen

--- a/aclap/src/app/components/discipline/discipline.component.tns.html
+++ b/aclap/src/app/components/discipline/discipline.component.tns.html
@@ -1,1 +1,1 @@
-<Button class="-outline -rounded-sm" text="discipline works!"></Button>
+<Label text="{{ discipline.subject.name + ' ' + discipline.year }}" color="{{ discipline.subject.color }}"></Label>
