Displayer and Each Edit Form with a Format

--- a/aclap/src/app/components/app.component.scss
+++ b/aclap/src/app/components/app.component.scss
@@ -1,3 +1,12 @@
+/*
+$jumbo-color: #74a56f;
+$button-color: #Ef6423;
+$lime-color: #FAB521;
+$nav-color:#206A5D;
+$gray-dark: #596668;
+$l-grey: #d3d8d8;
+*/
+
 $jumbo-color: #23AEE5;
 $button-color: #Ef6423;
 $lime-color: #FAB521;
