--- a/aclap/src/app/components/edit/edit-paragraph/edit-paragraph.component.html
+++ b/aclap/src/app/components/edit/edit-paragraph/edit-paragraph.component.html
@@ -1,1 +1,11 @@
-<p>edit-paragraph works!</p>
+<div class="card mb-2">
+    <div class="card-header"><h3>  Párrafo </h3></div>
+    <div class="card-body">
+        <form [formGroup]=form >
+            <div class="form-group">
+                <label for="text">Texto</label>
+                <input formControlName=text/>
+            </div>
+        </form>
+    </div>
+</div>
