--- a/aclap/src/app/components/edit/edit-activity/edit-activity.component.html
+++ b/aclap/src/app/components/edit/edit-activity/edit-activity.component.html
@@ -1,1 +1,25 @@
-<p>edit-activity works!</p>
+<div class="card">
+    <div class="card-header">
+        <h3>Actividad</h3>
+    </div>
+    <div class="card-body">
+        <form [formGroup]=form >
+            <div class="form-group">
+                <label for="description">Contraseña</label>
+                <input formControlName=description/>
+            </div>
+            <div class="form-group">
+                <label for="estimatedMinutes">Minutos Estimados</label>
+                <input formControlName=estimatedMinutes/>
+            </div>
+            <div class="form-group">
+                <label for="tools">Útiles Necesarios</label>
+                <input formControlName=tools/>
+            </div>
+            <div class="form-group">
+                <label for="questions">Preguntas</label>
+                <input formControlName=questions/>
+            </div>
+        </form>
+    </div>
+</div>
