--- a/aclap/src/app/components/edit/edit-image/edit-image.component.html
+++ b/aclap/src/app/components/edit/edit-image/edit-image.component.html
@@ -1,1 +1,19 @@
-<p>edit-image works!</p>
+<div class="card mb-2">
+    <div class="card-header"><h3> Imagen</h3></div>
+    <div class="card-body">
+        <form [formGroup]=form >
+            <div class="form-group">
+                <label for="url">URL de la imagen</label>
+                <input formControlName=url/>
+            </div>
+            <div class="form-group">
+                <label for="footing">Descripción de la Imagen</label>
+                <input formControlName=footing/>
+            </div>
+            <div class="form-group">
+                <label for="reference">Fuente de la imagen:</label>
+                <input formControlName=reference/>
+            </div>
+        </form>
+    </div>
+</div>
