--- a/aclap/src/app/components/edit/edit-youtube/edit-youtube.component.html
+++ b/aclap/src/app/components/edit/edit-youtube/edit-youtube.component.html
@@ -1,1 +1,11 @@
-<p>edit-youtube works!</p>
+<div class="card mb-2">
+    <div class="card-header"><h3> Enlace a Youtube  </h3></div>
+    <div class="card-body">
+        <form [formGroup]=form >
+            <div class="form-group">
+                <label for="url">Enlace del video de youtube</label>
+                <input formControlName=url/>
+            </div>
+        </form>
+    </div>
+</div>
