--- a/aclap/src/app/components/module-edit/module-edit.component.html
+++ b/aclap/src/app/components/module-edit/module-edit.component.html
@@ -15,9 +15,7 @@
         <div class="col-12 col-md-7">
             <!-- LEFT ROW  -->
             <div class="container">
-                <h1>
-                    This is a test.
-                </h1>
+                <app-edit-displayer [sections]=sections></app-edit-displayer>
             </div>
         </div>
         <div class="col-12 col-md-5 order-first order-md-last">
