--- a/aclap/src/app/components/module-page/module-page.component.html
+++ b/aclap/src/app/components/module-page/module-page.component.html
@@ -13,20 +13,18 @@
     </div>
     <div class="container">
         <div class="row mt-4">
-            <div class="col-12 col-md-6">
+            <div class="col-12">
                 <ul class="list-group">
-                    <li class="list-group-item active header"><h3>Requisitos previos</h3></li>
-                    <div *ngFor="let requirement of module.requirements">
-                        <li class="list-group-item"> {{requirement}} </li>
+                    <li class="list-group-item active header"><h3>Antecedentes</h3></li>
+                    <div *ngFor="let part of module.antecedents.split('\n')">
+                        <li class="list-group-item"> {{part}} </li>
                     </div>
                 </ul>
             </div>
-            <div class="col-12 col-md-6 pt-3 pt-md-0">
+            <div class="col-12 pt-3">
                 <ul class="list-group">
                     <li class="list-group-item active header"><h3>Objetivos</h3></li>
-                    <div *ngFor="let objective of module.objectives">
-                        <li class="list-group-item"> {{objective}} </li>
-                    </div>
+                    <li class="list-group-item"> {{module.objective}} </li>
                 </ul>
             </div>
         </div>
