--- a/aclap/src/app/components/module-edit/module-edit.component.html
+++ b/aclap/src/app/components/module-edit/module-edit.component.html
@@ -22,8 +22,8 @@
             <!-- RIGHT ROW  -->
             <div class="container-fluid pt-0 pt-md-5">
                 <app-edit-module-info [module]=module></app-edit-module-info>
-                <h1 class="h1"> HELL.O </h1>
             </div>
+            <button class="btn btn-primary" (click)="checkStatus()">test</button>
         </div>
     </div>
 </div>
