--- a/aclap/src/app/components/module-edit/module-edit.component.scss
+++ b/aclap/src/app/components/module-edit/module-edit.component.scss
@@ -1,7 +1,8 @@
 @use '../app.component.scss';
 
 .cont-fluid{
-    max-width:1170px;
+    //max-width:1170px;
+    min-width: 1px;
 }
 
 .jumbotron{
