--- a/aclap/src/app/components/edit/edit-activity/edit-activity.component.html
+++ b/aclap/src/app/components/edit/edit-activity/edit-activity.component.html
@@ -6,19 +6,19 @@
         <form [formGroup]=form >
             <div class="form-group">
                 <label for="description">Contraseña</label>
-                <input formControlName=description/>
+                <input formControlName=description  [(ngModel)]="activity.description" />
             </div>
             <div class="form-group">
                 <label for="estimatedMinutes">Minutos Estimados</label>
-                <input formControlName=estimatedMinutes/>
+                <input formControlName=estimatedMinutes [(ngModel)]="activity.estimatedMinutes"/>
             </div>
             <div class="form-group">
                 <label for="tools">Útiles Necesarios</label>
-                <input formControlName=tools/>
+                <input formControlName=tools  [(ngModel)]="activity.tools"/>
             </div>
             <div class="form-group">
                 <label for="questions">Preguntas</label>
-                <input formControlName=questions/>
+                <input formControlName=questions />
             </div>
         </form>
     </div>
