--- a/aclap/src/app/components/edit/edit-displayer/edit-displayer.component.html
+++ b/aclap/src/app/components/edit/edit-displayer/edit-displayer.component.html
@@ -1,17 +1,61 @@
-<div *ngFor="let section of sections">
+<div *ngFor="let section of sections; let i=index">
     <div class="col-12" *ngIf="isActivity(section)">
-        <app-edit-activity [activity]=section ></app-edit-activity>
+        <div class="card shadow-lg">
+            <div class="card-header">
+                <button type="button" class="close" (click)="deleteSection(i)">&times;</button>
+                <h3 class="modal-title">Actividad</h3>
+            </div>
+            <div class="card-body">
+                <app-edit-activity [activity]=section ></app-edit-activity>  
+            </div>
+        </div>
     </div>
     <div class="col-12" *ngIf="isImage(section)">
-        <app-edit-image [image]=section></app-edit-image>
+        <div class="card shadow-lg">
+            <div class="card-header">
+                <button type="button" class="close" (click)="deleteSection(i)">&times;</button>
+                <h3 class="modal-title">Imagen</h3>
+                
+            </div>
+            <div class="card-body">
+               <app-edit-image [image]=section></app-edit-image> 
+            </div>
+        </div>
     </div>
     <div class="col-12" *ngIf="isParagraph(section)">
-        <app-edit-paragraph [paragraph]=section></app-edit-paragraph>
+        <div class="card shadow-lg">
+            <div class="card-header">
+                <button type="button" class="close" (click)="deleteSection(i)" >&times;</button>
+                <h3 class="modal-title">Párrafo</h3>
+                
+            </div>
+            <div class="card-body">
+                <app-edit-paragraph [paragraph]=section></app-edit-paragraph>
+            </div>
+        </div>
     </div>
     <div class="col-12" *ngIf="isTitle(section)">
-        <app-edit-title [title]=section></app-edit-title>
+        <div class="card shadow-lg">
+            <div class="card-header">
+                <button type="button" class="close" (click)="deleteSection(i)" >&times;</button>
+                <h3 class="modal-title">Título / Subtítulo</h3>
+                
+            </div>
+            <div class="card-body">
+                <app-edit-title [title]=section></app-edit-title>
+            </div>
+        </div>
     </div>
     <div class="col-12" *ngIf="isYoutube(section)">
-        <app-edit-youtube [video]=section></app-edit-youtube>
+        <div class="card shadow-lg">
+            <div class="card-header">
+                <button type="button" class="close" (click)="deleteSection(i)" >&times;</button>
+                <h3 class="modal-title">Link de Youtube</h3>
+                
+            </div>
+            <div class="card-body">
+                <app-edit-youtube [video]=section></app-edit-youtube>
+            </div>
+        </div>
     </div>
 </div>
